Fix height issues with mobile nav and mobile presenter dialog on iOS

--- a/ui/components/presenters.scss
+++ b/ui/components/presenters.scss
@@ -77,7 +77,7 @@
   max-width: 45.4275rem;
   padding: 4.4375rem 5.4375rem;
   padding-bottom: var(--space-3);
-  height: min(calc(100vh - var(--space-2)), 35rem);
+  height: min(calc(100dvh - var(--space-2)), 35rem);
   overflow: auto;
 
   .dialog-close {
@@ -209,8 +209,8 @@
     border: none;
     width: 100vw;
     max-width: 100vw;
-    height: 100vh;
-    max-height: 100vh;
+    height: 100dvh;
+    max-height: 100dvh;
     padding-inline: var(--space-3);
 
     .dialog-close {
